# dagflow

./: CMakeLists.txt  README.md  dag_flow_unittest.cpp  dag_flower_unittest.cpp
common/: lock_queue.h  template_helper.h  template_helper_impl.h  template_helper_unittest.cpp  thread_pool.h
dagflow/: dag_data.h  dag_runner.h  data_manager.h  data_manager_unittest.cpp  node.h  node_unittest.cpp  result_data.h  runner.h  runner_impl.h  runner_unittest.cpp
dagflower/: dag_flower.h  dag_flower_context.h  data_manager.h  node_unittest.cpp
dagflower/dagflower_info/: dag_data.h  dag_data.inl  dag_flower_info.h  dag_flower_info_interface.h  dag_flower_info_interface.inl  dag_flower_info_unittest.cpp
dagflower/executor/: dag_executor_info_interface.h  dag_executor_interface.h
dagflower/executor/begin_node/: begin_node.h  begin_node_info.h
dagflower/executor/end_node/: end_node.h
dagflower/executor/node/: node.h  node_info.h
